--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="text-container">
             <p>You are my heart, my life, my one and only thought.
                 In all the world, there is no heart for me like yours.
-                Whatever our souls are made of, his and mine are the same.
+                Whatever our souls are made of, her and mine are the same.
                 You are my sun, my moon, and all my stars.
                 I am yours, don't give myself back to me.
                 True love stories never have endings.
